# stp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
include/: a_star.h  algorithm.h  ida_star.h  packed_storage.h  parallel_ida_star.h  pdb.h  process_info.h  puzzle.h  ranking.h
script/: build.ps1  build.sh  test.ps1  test.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp  test_manhattan_modified_puzzle.cpp  test_manhattan_standard_puzzle.cpp  test_modified_puzzle.cpp  test_pdb_modified_puzzle.cpp  test_pdb_standard_puzzle.cpp  test_standard_puzzle.cpp  test_utils.cpp  test_utils.h
test/data/: felner1000.txt
